--- a/src/style.scss
+++ b/src/style.scss
@@ -33,6 +33,9 @@ nav {
   padding: 5% 0 5% 5%;
   background-color: $nav-bg-color;
 }
+#nav-projects-title {
+  padding-left: 40px;
+}
 #nav-projects-parent {
   display: flex;
   align-items: flex-start;
