--- a/src/style.scss
+++ b/src/style.scss
@@ -5,7 +5,7 @@ body {
   height: 100vh;
   margin: 0px;
   display: grid;
-  grid-template-columns: 2fr 3fr;
+  grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 10fr; 
 }
 ul {
@@ -66,6 +66,13 @@ main {
   padding: 5%;
   grid-column: 2/3;
   grid-row: 2/3;
+}
+#add-task-btn {
+  background-color: aliceblue;
+  text-align: left;
+  border: 1px solid black;
+  padding: 5px;
+  width: 100%;
 }
 .todo-item {
   margin-bottom: 2%;
