sort projects by home ubtton

--- a/src/style.scss
+++ b/src/style.scss
@@ -74,7 +74,7 @@ main {
   padding: 5px;
   width: 100%;
 }
-#new-task-form {
+.new-task-form {
   padding: 10px;
   background-color: aliceblue;
   border-radius: 5px;
