--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@ body {
   grid-template-rows: 1fr 10fr; 
 }
 ul {
+  margin-top: 0px;
   list-style-position: inside;
 }
 li {
@@ -33,13 +34,34 @@ nav {
   padding: 5% 0 5% 5%;
   background-color: $nav-bg-color;
 }
+#home-title {
+  margin: 0px 20px 0px 20px;
+  border-bottom: 1px solid black
+}
+#home-btn {
+  font-size: 1rem;
+}
 #nav-projects-title {
-  padding-left: 40px;
+  margin: 0px 20px 0px 20px;
+  font-size: 1rem;
+  border-bottom: 1px solid black;
 }
 #nav-projects-parent {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  margin-bottom: 0px;
+}
+#create-project-container {
+  margin: 0px 20px 0px 20px;
+  padding: 0px;
+  border-bottom: 1px solid black;
+}
+#new-task-content {
+  margin:10px 0px 10px 0px;
+}
+#project-btn {
+  font-size: 1.9vw;
 }
 .nav-project {
   padding: 2px;
