--- a/src/style.scss
+++ b/src/style.scss
@@ -35,12 +35,16 @@ nav {
   background-color: $nav-bg-color;
 }
 #home-title {
+  padding-top: 5px;
   padding-bottom: 5px;
   margin: 0px 20px 0px 20px;
   border-bottom: 1px solid black
 }
 #home-btn {
   font-size: 1rem;
+}
+#today-btn, #week-btn {
+  padding-top: 7px;
 }
 #nav-projects-title {
   padding-bottom: 5px;
@@ -55,19 +59,20 @@ nav {
   margin-bottom: 0px;
 }
 #create-project-container {
-  margin: 0px 20px 0px 20px;
   padding: 0px;
+  margin: 0px 20px 0px 20px;
   border-bottom: 1px solid black;
 }
 #new-project-content {
-  margin:10px 0px 10px 0px;
+  padding: 5px 20px 15px 15px;
 }
 #new-project-form {
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 1fr 10px;
   grid-template-rows: 1fr 1fr;
 }
 #add-todo-title-input {
+  width: 150px;
   grid-column: 1/2;
   grid-row: 1/2;
 }
@@ -75,23 +80,23 @@ nav {
   grid-column: 2/3;
   grid-row: 1/2;
 }
+#add-todo-btn {
+  width: 158px;
+  background-color: steelblue;
+  border-radius: 2px;
+}
 .nav-project {
   padding: 2px;
 }
 .new-todo-item {
   margin: 1px;
 }
-#add-todo-btn {
-  background-color: steelblue;
-  border-radius: 2px;
-}
 main {
   padding: 5%;
 }
 #main-content {
-  display: grid;
-  grid-template-columns: 1fr 25px;
-  grid-template-rows: 100px 1fr 50px;
+  display: flex;
+  flex-direction: column;
 }
 #home-content-title {
   grid-row: 1/2;
@@ -100,11 +105,28 @@ main {
 #add-task-btn {
   grid-column: 1/3;
   grid-row: 3/4;
-  background-color: aliceblue;
+  background-color: white;
   text-align: left;
   border: 1px solid black;
+  border-radius: 5px;
   padding: 5px;
   width: 100%;
+}
+#add-task-btn:hover {
+  background-color: aliceblue;
+}
+#project-header {
+  background-color: $header-bg-color;
+  color: aliceblue;
+  display: grid;
+  border-radius: 5px;
+  grid-template-columns: 1fr 100px;
+  padding: 30px 20px 30px 20px;
+  margin-bottom: 20px;
+}
+#remove-project-btn {
+  color: aliceblue;
+  grid-column: 2/3;
 }
 #project-module {
   align-self:flex-start;
@@ -113,47 +135,44 @@ main {
   display: grid;
   grid-template-columns: 1fr;
 }
-#project-title, #home-content-title{
-  color: aliceblue;
-  padding: 35px 0px 35px 20px;
-  margin-bottom: 15px;
-  border-radius: 2px;
-  background-color: steelblue;
-}
-#remove-project-btn {
-  margin-bottom: 15px;
-  grid-column: 2/3;
-}
 #task-container {
   grid-column: 1/2;
   grid-row: 2/3;
 }
 .todo-item {
+  border-radius: 5px;
   background-color: aliceblue;
   display: grid;
-  grid-template-columns: 1fr 75px;
-  grid-template-rows: 20px 1fr 20px;
+  grid-template-columns: 50px 1fr 90px 25px;
+  grid-template-rows: 20px 20px 1fr;
+}
+#task-remove-title {
+  font-weight: bold;
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+#remove-task-btn {
+  margin: 0px;
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
+#remove-task-btn:hover {
+  cursor: pointer;
 }
 #task-title {
   font-weight: bold;
-  grid-column: 1/2;
+  grid-column: 1/3;
   grid-row: 1/2;
-}
-#remove-task-btn {
-  grid-column: 2/3;
-  grid-row: 1/2;
-}
-#remove-task-btn:hover {
-  background-color: white;
-  border-radius: 5px;
 }
 #task-description {
-  grid-column: 1/2;
-  grid-row: 2/3;
+  grid-column: 1/3;
+  grid-row: 2/4;
 }
 #task-date {
-  grid-column: 1/2;
-  grid-row: 3/4;
+  font-weight: bold;
+  height: 20px;
+  grid-column: 3/5;
+  grid-row: 1/2;
 }
 .new-task-form {
   display: grid;
