--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,8 @@
 $header-bg-color: steelblue;
 $nav-bg-color: aliceblue;
+$title-font: 'Lobster', cursive;
+$secondary-font: 'Oswald', sans-serif;
+$accent-font: 'Aboreto', cursive;
 
 body {
   height: 100vh;
@@ -16,12 +19,15 @@ li {
   list-style: none;
 }
 button {
+  font-size: .6rem;
+  font-family: $accent-font;
   padding: 0;
   background: none;
   border: none;
   cursor: pointer;
 }
 header {
+  font-family: $title-font;
   background-color: $header-bg-color;
   grid-column: 1/3;
   grid-row: 1/2;
@@ -45,12 +51,11 @@ nav {
   border-bottom: 1px solid black
 }
 #home-btn {
+  font-family: $title-font;
   font-size: 1rem;
 }
-#today-btn, #week-btn {
-  padding-top: 7px;
-}
 #nav-projects-title {
+  font-family: $title-font;
   padding-bottom: 5px;
   margin: 0px 20px 0px 0px;
   font-size: 1rem;
@@ -66,6 +71,10 @@ nav {
   padding: 0px;
   margin: 0px 20px 0px 0px;
   border-bottom: 1px solid black;
+}
+#project-btn {
+  font-size: .8rem;
+  font-family: $title-font;
 }
 #new-project-content {
   padding: 5px 20px 15px 15px;
@@ -90,7 +99,7 @@ nav {
   border-radius: 2px;
 }
 .nav-project {
-  padding: 2px;
+  padding: 5px 2px 2px 2px;
 }
 .new-todo-item {
   margin: 1px;
@@ -120,12 +129,14 @@ main {
   background-color: aliceblue;
 }
 #project-header {
+  font-family: $secondary-font;
+  font-size: 2rem;
   background-color: $header-bg-color;
   color: aliceblue;
   display: grid;
   border-radius: 5px;
   grid-template-columns: 1fr 100px;
-  padding: 30px 20px 30px 20px;
+  padding: 20px 20px 20px 20px;
   margin-bottom: 20px;
 }
 #remove-project-btn {
@@ -164,6 +175,7 @@ main {
   cursor: pointer;
 }
 #task-title {
+  font-family: $secondary-font;
   font-weight: bold;
   grid-column: 1/3;
   grid-row: 1/2;
