--- a/src/style.scss
+++ b/src/style.scss
@@ -71,6 +71,11 @@ nav {
   padding: 0px;
   margin: 0px 20px 0px 0px;
   border-bottom: 1px solid black;
+  display: flex;
+}
+#plus-icon {
+  padding-right: 3px;
+  width: 15px;
 }
 #project-btn {
   font-size: .8rem;
@@ -124,6 +129,11 @@ main {
   border-radius: 5px;
   padding: 5px;
   width: 100%;
+  display: flex;
+}
+#add-task-icon {
+  padding-right: 3px;
+  width: 10px;
 }
 #add-task-btn:hover {
   background-color: aliceblue;
