--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@ $accent-font: 'Aboreto', cursive;
 
 body {
   height: 100vh;
+  width: 95vw;
   margin: 0px;
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -152,11 +153,7 @@ main {
   grid-column: 2/3;
 }
 #project-module {
-  align-self:flex-start;
   grid-row: 2/3;
-  grid-column: 1/3;
-  display: grid;
-  grid-template-columns: 1fr;
 }
 #task-container {
   grid-column: 1/2;
@@ -167,7 +164,7 @@ main {
   background-color: aliceblue;
   display: grid;
   grid-template-columns: 50px 1fr 90px 25px;
-  grid-template-rows: 20px 20px 1fr;
+  grid-template-rows: 45px 20px 1fr;
 }
 #task-remove-title {
   font-weight: bold;
@@ -183,6 +180,7 @@ main {
   cursor: pointer;
 }
 #task-title {
+  font-size: 1rem;
   font-family: $secondary-font;
   font-weight: bold;
   grid-column: 1/3;
